feat : responding to a click

--- a/accessingelements.html
+++ b/accessingelements.html
@@ -10,7 +10,8 @@
     <p class="" id="text">Hello World!</p>
     <script type="text/javascript">
         document.getElementById("text").innerHTML= "Hello Geeks!";
-        //document.getElementById extracts the content of the given ID
+        //document -> we need to get something from this document
+        //.getElementById extracts the content of the given ID
         //.innerHTML goes to the HTML and modifies the content according to the user
     </script>
 </body>
