--- a/changingcontent.html
+++ b/changingcontent.html
@@ -21,7 +21,7 @@
         // }
        document.getElementById("createPara").onclick = function()
        {
-           document.getElementById("emptyPara").innerHTML = "Clicked!";
+           document.getElementById("emptyPara").innerHTML = "<h1>Clicked!</h1>";
        }
     </script>
 </body>
