feat : disappearing the content after a click

--- a/manipulatingstyles.html
+++ b/manipulatingstyles.html
@@ -12,9 +12,10 @@
     <script type="text/javascript">
     document.getElementById("styleText").onclick = function()
     {
-        document.getElementById("moreText").style.color = "blue";
-        document.getElementById("moreText").style.fontSize = "50px";
-    }
+        // document.getElementById("moreText").style.color = "blue";
+        // document.getElementById("moreText").style.fontSize = "50px";
+         document.getElementById("moreText").style.display = "none";
+}
 </script>
 </body>
 </html>
