--- a/arrays.html
+++ b/arrays.html
@@ -11,6 +11,13 @@
         var myArray = new Array();
         myArray[0] = "Pizza";
         myArray[1] = "Chocolate";
+        
+        var tweets = ["Morning!", "Coffee Person!"];
+       tweets.push("Work!");
+       tweets.splice(1, 1); //delete 1(at the right) tweet starting at item 1(at the left )
+       // this should delete "Coffee Person!"
+       console.log(tweets);
+        // console.log(myArray);
     </script>
 </body>
 </html>
