--- a/arrays.html
+++ b/arrays.html
@@ -14,7 +14,8 @@
         
         var tweets = ["Morning!", "Coffee Person!"];
        tweets.push("Work!");
-       tweets.splice(1, 1); //delete 1(at the right) tweet starting at item 1(at the left )
+       tweets.splice(1, 1); //start from item number 1 and delete 1 item
+       tweets.splice(0, 3)
        // this should delete "Coffee Person!"
        console.log(tweets);
         // console.log(myArray);
