--- a/arrays.html
+++ b/arrays.html
@@ -14,9 +14,10 @@
         
         var tweets = ["Morning!", "Coffee Person!"];
        tweets.push("Work!");
-       tweets.splice(1, 1); //start from item number 1 and delete 1 item
-       tweets.splice(0, 3)
+    //    tweets.splice(1, 1); //start from item number 1 and delete 1 item
+    //    tweets.splice(0, 3);
        // this should delete "Coffee Person!"
+       tweets.splice(1, 1 , "Cornflakes!");
        console.log(tweets);
         // console.log(myArray);
     </script>
